<resources>
    <string name="app_name">Humane</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="action_settings">Settings</string>

    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="mobile_no">Mobile No</string>
    <string-array name="gender_option">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
    </string-array>

    <string-array name="country_option">
        <item>India</item>
        <item>USA</item>
        <item>Australia</item>
    </string-array>

    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="email_phone">Email/Phone</string>
    <string name="user_id">User ID</string>
    <string name="donation_details">Donation Details</string>
    <string name="volunteer_services">Volunteer Services</string>
    <string name="org_list">Organisation List</string>
    <string name="org_reg_no">Org Reg No</string>
    <string name="org_name">Org Name</string>
    <string name="org_address">Address</string>
    <string name="next">NEXT</string>
    <string-array name="org_type">
        <item>Org Type</item>
        <item>Children Home</item>
        <item>Old Age Home</item>
    </string-array>
    <string name="location">Location</string>
    <string name="org_description">Org Description</string>
    <string name="org_people_count">People Count</string>

    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="setLocation">Set Location</string>
    <string name="google_maps_key">AIzaSyArP4ZNEEuKHFvqJW7WlclB0LggjRLQv90</string>
    <string name="not_an_account">No account yet? Create one</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="add_an_organisation">Add an Organisation</string>
    <string name="create_account">Register</string>
    <string name="already_member">Already a member ? Login</string>

    <string name="list_heading_itemName">Item Name</string>
    <string name="list_heading_gender">Gender</string>
    <string name="list_heading_quantity">Quantity</string>
    <string name="need_details_title">Need Details</string>
    <string name="need_id_receival_page">Need ID:</string>
    <string name="posted_date">Posted Date:</string>
    <string name="show_details_button">Show Need List</string>
    <string name="donor_list_title">Donations</string>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="Need">Need Details</string>
    <string name="Donate">Doante</string>
    <string name="minus">&#45;</string>
    <string name="add">&#43;</string>
    <string name="contact">Contact</string>
    <string name="register_later"><u>Register Later</u></string>

    <string name="your_contribution">YourContribution</string>
    <string name="edit">Edit</string>
    <string name="selected_product">Selected Product</string>
    <string name="quantity">Quantity</string>
    <string name="donating">Donating by urself</string>
    <string name="volunteer">Need Volunteer</string>
    <string name="deadline">deadline</string>
    <string name="choose">Choose Date and TIme</string>
    <string name="choose_address">Choose Address</string>

    <string name="category_name_display">Category : </string>
    <string name="item_name_display">Item Name : </string>
    <string name="item_quantity_display">Quantity : </string>
    <string name="gender_display">Gender : </string>
    <string name="age_display">Age : </string>
    <string name="required_at_display">Required at : </string>

    <string name="apply_filter">Apply</string>
    <string name="clear_filter">Clear</string>
    <string name="title_activity_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_org_profile">OrgProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="menu">Menu</string>
    <string name="donations">Donations</string>
    <string name="org_profile">Org Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="home">Home</string>
</resources>
