<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="5dp">
            <TextView
                android:text="@string/category_name_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/category_needForm"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="0.95"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.025"
        android:src="@drawable/ic_edit_black"
        android:id="@+id/edit_needForm"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_delete_black"
        android:layout_weight="0.025"
        android:id="@+id/delete_needForm"/>
</LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:id="@+id/categoryIcon_needForm"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.25"
                android:paddingLeft="10dp">
            <TextView
                android:text="@string/item_name_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemViewName_needForm"
                android:textSize="16dp"
                android:textColor="@color/colorSecondaryText"/>

            <TextView
                android:text="@string/item_quantity_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemViewQuantity_needForm"
                android:textSize="16dp"
                android:textColor="@color/colorSecondaryText"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/clothesViewLayout_needForm">

            <TextView
                android:text="@string/gender_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genderView_needForm"
                android:textSize="16dp"
                android:textColor="@color/colorSecondaryText"/>
                    <TextView
                        android:text="@string/age_display"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ageView_needForm"
                        android:textSize="16dp"
                        android:textColor="@color/colorSecondaryText"/>

                </LinearLayout>
                <TextView
                    android:text="@string/required_at_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dateView_needForm"
                    android:textSize="14dp"
                    android:textColor="@color/colorSecondaryText"/>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>
</LinearLayout>