<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradient_loing_page"
    app:layout_collapseParallaxMultiplier="1.0">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ngo"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_height="120dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Email Label -->
            <EditText android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email_phone"
                android:textColorHint="#fff"
                android:textColor="?attr/colorControlNormal"
                android:paddingTop="10dp"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp" />

            <EditText android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="#fff"
                android:fontFamily="sans-serif"
                android:textColor="?attr/colorControlNormal"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp" />

            <!-- Password Label -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_height="70dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:background="@drawable/button_circle_edge"
                    android:textColor="@color/colorTextIcons"
                    android:layout_width="120dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_height="70dp">

                <Button android:id="@+id/link_login"
                    android:layout_height="wrap_content"
                    android:text="@string/not_an_account"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="16dip"
                    android:layout_width="300dp"
                    android:background="@drawable/capsule_shape_button" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center">

                <TextView
                    android:text="@string/register_later"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/registerLater"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
