<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_marginRight="2dp"
    android:layout_marginLeft="2dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_loing_page"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/ngo"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="120dp" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="6dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_weight="0.77"
                android:weightSum="1">
                <!-- Name Label -->

                <EditText android:id="@+id/email_coordinator_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textColorHint="#FFFFFF"
                    android:textColor="?attr/colorControlNormal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

                <EditText android:id="@+id/first_name_coordinator_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name"
                    android:textColorHint="#FFFFFF"
                    android:textColor="?attr/colorControlNormal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />


                <EditText android:id="@+id/mobile_coordinator_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/mobile_no"
                    android:textColorHint="#FFFFFF"
                    android:textColor="?attr/colorControlNormal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <EditText android:id="@+id/password_coordinator_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@string/sans_serif"
                    android:hint="@string/password"
                    android:textColorHint="#FFFFFF"
                    android:textColor="?attr/colorControlNormal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/country_spinner_coordinator_register"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/country_option"

                    android:layout_marginLeft="2dp" />


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:weightSum="1"
                android:layout_weight="4.12">

                <!-- Signup Button -->
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/signup_coordinator_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:padding="12dp"
                    android:background="@drawable/button_circle_edge"
                    android:textColor="@color/colorTextIcons"
                    android:text="@string/next"
                    android:gravity="center"
                    android:layout_weight="3.77" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>



